--- a/_config.yml
+++ b/_config.yml
@@ -1,101 +1,87 @@
 #
-	# This file contains configuration flags to customize your site
-	#
-	
+# This file contains configuration flags to customize your site
+#
 
-	# Name of your site (displayed in the header)
-	name: San3ncrypt3d
-	
+# Name of your site (displayed in the header)
+name: san3ncrypt3d
 
-	# Short bio or description (displayed in the header)
-	description: Making cybersecurity a habit & Privacy a Goal  
-	# URL of your avatar or profile pic (you could use your GitHub profile pic)
-	avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-	
+# Short bio or description (displayed in the header)
+description: Making cybersecurity a habit & Privacy a Goal  
 
-	#
-	# Flags below are optional
-	#
-	
+# URL of your avatar or profile pic (you could use your GitHub profile pic)
+avatar: /images/glider.png
 
-	# Includes an icon in the footer for each username you enter
-	footer-links:
-	  dribbble:
-	  email: sanjaybabu.1997@gmail.com
-	  facebook:
-	  flickr:
-	  github: san3ncrypt3d
-	  instagram: san3ncrypt3d
-	  linkedin:
-	  pinterest:
-	  rss: # just type anything here for a working RSS icon
-	  twitter: san3ncrypt3d
-	  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-	  youtube: # channel/<your_long_string> or user/<user-name>
-	  googleplus: # anything in your profile username that comes after plus.google.com/
-	
+#
+# Flags below are optional
+#
 
-	
+# Includes an icon in the footer for each username you enter
+footer-links:
+  dribbble:
+  email: sanjaybabu.1997@gmail.com
+  facebook:
+  flickr:
+  github: san3ncrypt3d
+  instagram: san3ncrypt3d
+  linkedin:
+  pinterest:
+  rss: 
+  twitter: san3ncrypt3d
+  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  youtube: # channel/<your_long_string> or user/<user-name>
+  googleplus: # anything in your profile username that comes after plus.google.com/
 
-	# Enter your Disqus shortname (not your username) to enable commenting on posts
-	# You can find your shortname on the Settings page of your Disqus account
-	disqus:
-	
 
-	# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-	google_analytics:
-	
+# Enter your Disqus shortname (not your username) to enable commenting on posts
+# You can find your shortname on the Settings page of your Disqus account
+disqus: san3ncrypt3d
 
-	# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-	# Used for Sitemap.xml and your RSS feed
-	url:
-	
+# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
+google_analytics: UA-50530735-1
 
-	# If you're hosting your site at a Project repository on GitHub pages
-	# (http://yourusername.github.io/repository-name)
-	# and NOT your User repository (http://yourusername.github.io)
-	# then add in the baseurl here, like this: "/repository-name"
-	baseurl: ""
-	
+# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Used for Sitemap.xml and your RSS feed
+url: 
 
-	#
-	# !! You don't need to change any of the configuration flags below !!
-	#
-	
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+baseurl: ""
 
-	permalink: /:year/:month/:day/:title/
-	
+#
+# !! You don't need to change any of the configuration flags below !!
+#
 
-	# The release of Jekyll Now that you're using
-	version: v1.2.0
-	
+permalink: /:year/:month/:day/:title/
 
-	# Jekyll 3 now only supports Kramdown for Markdown
-	kramdown:
-	  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-	  input: GFM
-	  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-	  syntax_highlighter: rouge
-	  syntax_highlighter_opts:
-	    # Use existing pygments syntax highlighting css
-	    css_class: 'highlight'
-	
+# The release of Jekyll Now that you're using
+version: v1.2.0
 
-	# Set the Sass partials directory, as we're using @imports
-	sass:
-	  style: :expanded # You might prefer to minify using :compressed
-	
+# Jekyll 3 now only supports Kramdown for Markdown
+kramdown:
+  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+  input: GFM
+  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    # Use existing pygments syntax highlighting css
+    css_class: 'highlight'
 
-	# Use the following plug-ins
-	gems:
-	  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-	  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-	
+# Set the Sass partials directory, as we're using @imports
+sass:
+  style: :expanded # You might prefer to minify using :compressed
 
-	# Exclude these files from your production _site
-	exclude:
-	  - Gemfile
-	  - Gemfile.lock
-	  - LICENSE
-	  - README.md
-	  - CNAME
+# Use the following plug-ins
+gems:
+  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-redirect-from
+
+# Exclude these files from your production _site
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - CNAME
