--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: san3ncrypt3d
 description: Making cybersecurity a habit & Privacy a Goal  
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/glider.png
+avatar: /images/av.png
 
 #
 # Flags below are optional
