--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: San3ncrypt3d
+name: San3ncrypt3d Inc.
 
 # Short bio or description (displayed in the header)
 description: Making cybersecurity a habit & Privacy a Goal  
